fixes x overflow in vizbuilder

--- a/app/pages/Visualize.css
+++ b/app/pages/Visualize.css
@@ -217,6 +217,9 @@
   & .area-chart {
     & .wrapper {
       padding: 0;
+      & .chart-wrapper {
+        width: 100%;
+      }
     }
   }
 }
